update: results section, add: labels to all participants based on the annotations of their strategies

--- a/analysis/preprocessing_and_init_analysis.ipynb
+++ b/analysis/preprocessing_and_init_analysis.ipynb
@@ -728,10 +728,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# add labels derived from annotations of strategies\n",
+    "add_labels = True\n",
+    "if add_labels:\n",
+    "    annotated_df = pd.read_csv(f'data/final_datasets/strategies_annotated.csv')\n",
+    "    annotated_df['Label'] = 0\n",
+    "    annotated_df.loc[annotated_df['type'] == 'strategy_simple', 'Label'] = annotated_df[annotated_df['type'] == 'strategy_simple'].apply(lambda x: 1 if x['Annotation'] == 'correct_reasoning' else 0, axis=1)\n",
+    "    annotated_df.loc[annotated_df['type'] == 'strategy_complex', 'Label'] = annotated_df[annotated_df['type'] == 'strategy_complex'].apply(lambda x: 2 if x['Annotation'] == 'correct_reasoning' else x['Label'], axis=1)\n",
+    "    participant_labels = annotated_df.groupby('workerid')['Label'].max().reset_index()\n",
+    "    participant_labels = participant_labels.rename(columns={'workerid': 'Subject'})\n",
+    "\n",
     "df = pd.read_csv(f'data/preprocessed_data/{df_name}.csv')\n",
     "final_df_features = ['propTimeOnSentMsg',\n",
     "                        'propTimeOnSentMsgSimple',\n",
@@ -776,6 +786,7 @@
     "    print(unambiguous_performance)\n",
     "save_final = final_df.rename(columns={'workerid': 'Subject'})\n",
     "save_final = save_final.rename(lambda x: x[0].upper() + x[1:], axis=1, inplace=False)\n",
+    "save_final = pd.merge(save_final, participant_labels, on='Subject', how='left')\n",
     "save_final.to_csv(f'data/final_datasets/{df_name}_participants_extended.csv', index=False)\n",
     "\n",
     "conditional_dfs = []\n",
@@ -800,7 +811,17 @@
     "            \n",
     "df_array = np.array(final_df.apply(lambda x: pd.concat(list(explode_by_condition(x)), axis=0), axis=1))\n",
     "final_df_condition = pd.concat(df_array, axis=0)\n",
-    "final_df_condition.to_csv(f'data/final_datasets/{df_name}_participants.csv', index=False)"
+    "# add labels from participants_labels to the final_df_condition \n",
+    "final_df_condition = pd.merge(final_df_condition, participant_labels, on='Subject', how='left')\n",
+    "\n",
+    "final_df_condition.to_csv(f'data/final_datasets/{df_name}_participants.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating a dataset for the CNN training from plots of scanpaths"
    ]
   },
   {
@@ -1724,7 +1745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
