--- a/tex/sections/implementation.tex
+++ b/tex/sections/implementation.tex
@@ -10,7 +10,7 @@ While the participants were recruited via Prolific \cite{prolific} - a subject p
 \label{sec:data:ref_games}
 There are 3 conditions of the reference games: Simple, Complex and Unambiguous. In the \autoref{sec:rsa} we mainly talked about the Simple and Complex conditions. The Unambiguous condition suits two main purposes. First of all, it acts as a sort of filler, so that participants do not get used to the same type of problems. Second of all, it acts as a control check, that is, participants who do not reach 75\% accuracy on the Unambiguous trials are excluded from the analysis.
 
-The trials were generated using 3 colors: red, green and blue, and 3 shapes: square, circle and triangle. The code used to generate trials can be found under the folder `trials' at \cite{github}. For each condition every unique sent message was repeated exactly twice. Which results in 12 trials of every condition. Another restriction we included was that available messages always have 2 shapes and 2 colors. Furthermore one simple and one complex trial was picked to be repeated once again in the very end of the experiment. These were so called strategy trials where we would ask the participants to explain their reasoning behind the choice of the object. All trials were randomly shuffled before the experiment, except for the strategy trials which were always at the end of the experiment.
+The trials were generated using 3 colors: red, green and blue, and 3 shapes: square, circle and triangle. The code used to generate trials can be found under the folder `trials' at \cite{github}. For each condition every unique sent message was repeated exactly twice. Which results in 12 trials of every condition. Another restriction we included was that available messages always have 2 shapes and 2 colors. Furthermore one Simple and one Complex trial was picked to be repeated once again in the very end of the experiment. These were so called strategy trials where we would ask the participants to explain their reasoning behind the choice of the object. All trials were randomly shuffled before the experiment, except for the strategy trials which were always at the end of the experiment. The full list of trials can be seen in \autoref{tab:trials}. 
 
 In addition, the feedback was incorporated in the trials. After every answer a pop up at the top of the screen would show up for 1200 ms. It would only show `Correct' or `Incorrect', based on whether the participant chose the target or not. No other feedback was given. during the experiment. The strategy trials did not include this features at all. 
 
@@ -131,7 +131,7 @@ Based on whether a point was inside a certain polygon or none of them it was ass
     \ffigbox{%
       \includegraphics[width=0.48\textwidth]{images/scanpath.png}
     }{%
-      \caption{Scanpath of a simple trial, and the layout of areas of interest. The colors of the main objects are used as follows: green -- target, yellow -- competitor and red -- distractor.}%
+      \caption{Scanpath of a Simple trial, and the layout of areas of interest. The colors of the main objects are used as follows: green -- target, yellow -- competitor and red -- distractor.}%
       \label{fig:features_scanpath}
     }
     \capbtabbox{%
@@ -195,7 +195,7 @@ However, we quickly realized that the model has a few issues. First of all, the 
     PropTimeOnAvailableMsgs + MsgType | Subject)
 \end{verbatim}
 
-Through this model we will be able to test the first two hypothesis. Mainly whether the distractor is positively associated with the accuracy on the complex trials. And, for the second hypothesis, whether the available messages become important on the simple trial comparing to unambiguous and maybe complex as well. The model will be fit on the trial level and predicts whether the answer was correct or not. The `Trial' and `AnswerTime' features was rescaled to be between -1 and 1, in order to match the scale of other features. All the eye tracking features were centered to have mean 0 but not scaled. This approach was chosen because it would make the interpretability of the models easier.
+Through this model we will be able to test the first two hypothesis. Mainly whether the distractor is positively associated with the accuracy on the Complex trials. And, for the second hypothesis, whether the available messages become important on the Simple trial comparing to unambiguous and maybe Complex as well. The model will be fit on the trial level and predicts whether the answer was correct or not. The `Trial' and `AnswerTime' features was rescaled to be between -1 and 1, in order to match the scale of other features. All the eye tracking features were centered to have mean 0 but not scaled. This approach was chosen because it would make the interpretability of the models easier.
 
 As for the third and fourth hypothesis, each of them will be tested using a separate model. Both of them predict whether a gaze point was on a certain area of interest. Hence, the data to fit them is made on the fixation level. Only the gaze points from the correctly solved trials were added to the data to match the hypothesis. The third hypothesis will be tested using the following model:
 \begin{verbatim}
@@ -211,8 +211,3 @@ The fourth hypothesis will be tested using the following model:
 \end{verbatim}
 It predicts whether a gaze point was on the bank of available messages or not based on the general information about the trial. 
 
-\subsection{Exploratory Analysis}
-\label{sec:analysis:exploratory}
-
-\subsubsection{CNNs}
-\label{sec:analysis:exploratory:cnn}
